<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/pachinko"
            android:id="@+id/pachi_img" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/reset_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_button" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/slot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slot_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/pachi_img" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/mycoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/my_coin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/slot_title"
            android:layout_marginStart="16dp" android:layout_marginLeft="16dp"/>
    <TextView
            android:text="@string/kakekin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kakekin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/my_coin"
            app:layout_constraintStart_toStartOf="@+id/my_coin"/>
    <Button
            android:text="@string/up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kakekin_up" app:layout_constraintEnd_toEndOf="@+id/slot_title"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/slot_title"/>
    <Button
            android:text="@string/down_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kakekin_down"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/kakekin_up"
            app:layout_constraintStart_toStartOf="@+id/kakekin_up"
    />
    <Button
            android:text="@string/start_button_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_button"
            app:layout_constraintStart_toStartOf="@+id/kakekin"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/kakekin_up"/>
    <TextView
            android:text="@string/myCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/my_coin" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/kakekin" app:layout_constraintStart_toStartOf="@+id/my_coin"
            android:id="@+id/myCoin"/>
    <TextView
            android:text="@string/kakeCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kakeCoin"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/kakekin" app:layout_constraintStart_toStartOf="@+id/kakekin"/>
</android.support.constraint.ConstraintLayout>