<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameActivity" tools:layout_editor_absoluteY="81dp">

    <TextView
            android:text="@string/kakeCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kakeCoin2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/kakekin_result"
            app:layout_constraintStart_toStartOf="@+id/kakekin_result"
    />
    <TextView
            android:text="@string/myCoin"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/myCoin2"
            app:layout_constraintStart_toStartOf="@+id/temoti_result"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/temoti_result"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/question"
            android:id="@+id/slot1_img"
            android:scaleType="fitCenter" app:layout_constraintEnd_toStartOf="@+id/slot2_img"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/slot2_img"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/question"
            android:id="@+id/slot2_img" android:scaleType="fitCenter"
            android:layout_marginTop="116dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/question"
            android:id="@+id/slot3_img"
            android:scaleType="fitCenter" app:layout_constraintStart_toEndOf="@+id/slot2_img"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/slot2_img"/>
    <TextView
            android:text="@string/result_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="@+id/slot1_img"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/slot1_img"/>
    <TextView
            android:text="@string/mycoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/result_text"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/result_text"
            android:id="@+id/temoti_result"/>
    <TextView
            android:text="@string/kakekin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kakekin_result" app:layout_constraintStart_toStartOf="@+id/temoti_result"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/back_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/temoti_result"/>
    <Button
            android:text="@string/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_button"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/pachinko"
            android:id="@+id/pachi2_img" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/slot3_img" android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="@+id/slot3_img"
            android:layout_marginBottom="48dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/atari_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/atari_coin" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/kakekin_result" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/myCoin2" app:layout_constraintStart_toStartOf="@+id/myCoin2"
    />
    <TextView
            android:text="@string/slot1_int"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slot1_int" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/slot1_img" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/slot1_img" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slot2_int"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/slot2_img"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slot3_int" app:layout_constraintStart_toEndOf="@+id/slot2_int"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/slot3_img"/>
</android.support.constraint.ConstraintLayout>